manifests/applications/media/dispatcharr-prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatcharr-prod-media-svc
  namespace: media
spec:
  selector:
      app: media
  ports:
    - port: 9191
      targetPort: http
      name: http
      protocol: TCP
